create Ticket class

--- a/index.html
+++ b/index.html
@@ -12,36 +12,37 @@
   <div class="container">
     <h1>Movie Tickets</h1>
 
-  <form id="movie-tickets">
+  <form id="movieTickets">
     <div class="form-group">
-      <label for="move-name">Movie</label>
+      <label for="movie">Movie</label>
       <select class="form-control" id="movie">
-        <option>Test 1</option>
-        <option>Test 2</option>
-        <option>Test 3</option>
-        <option>Test 4</option>
+        <option>Movie 1</option>
+        <option>Movie 2</option>
+        <option>Movie 3</option>
+        <option>Movie 4</option>
       </select>
     </div>
 
     <div class="form-group">
-      <label for="move-time">Times</label>
+      <label for="time">Times</label>
       <select class="form-control" id="time">
-        <option>Test 1</option>
-        <option>Test 2</option>
-        <option>Test 3</option>
-        <option>Test 4</option>
+        <option>Time 1</option>
+        <option>Time 2</option>
+        <option>Time 3</option>
+        <option>Time 4</option>
       </select>
     </div>
 
     <div class="form-group">
-      <label for="viewer-age">Your Age</label>
+      <label for="age">Your Age</label>
       <select class="form-control" id="age">
-        <option>Test 1</option>
-        <option>Test 2</option>
-        <option>Test 3</option>
-        <option>Test 4</option>
+        <option>Age Group 1</option>
+        <option>Age Group 2</option>
+        <option>Age Group 3</option>
+        <option>Age Group 4</option>
       </select>
     </div>
+    <button type="submit" name="button" id="submit" >Submit</button>
   </form>
 
 
